<resources>
    <string name="app_name">HomeEase</string>
    <string name="topic">Welcome to HomeEase!</string>
    <string name="description">Find trusted professionals for all your home service needs quick, easy, and reliable.</string>
    <string name="logo">HomeEase Logo</string>
    <string name="welcomes">Welcome page</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="catchup">Catch up on Your First Service now!</string>
    <string name="start">Catchup Image</string>
    <string name="started">🚀 Get Started</string>
    <string name="signup">signup icon</string>
    <string name="Register">📌 Register With Us!</string>
    <string name="safe">Your Information safe with Us</string>
    <string name="name">Enter Your Name</string>
    <string name="btn_signup">Sign Up</string>
    <string name="already_account">Already have an Account?</string>
    <string name="Signin">Welcome!</string>
    <string name="bro">bro</string>
    <string name="field_email">Enter e-mail</string>
    <string name="fieldpw">Enter Password</string>
    <string name="fieldspw">Enter Password</string>
    <string name="btnsignin">Sign In</string>
    <string name="nothave">Don\'t have an Account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pname">John Wilkins</string>
    <string name="pphoto">profilepic</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="imgrepair">Reparing</string>
    <string name="imgcleaning">Cleaning</string>
    <string name="imgelectric">electrical</string>
    <string name="tv_reparing">Reparing</string>
    <string name="tv_cleaning">Cleaning</string>
    <string name="tv_electric">Electrical</string>
    <string name="tv_experts">Top Experts</string>
    <string name="img_john">John Smith</string>
    <string name="img_mike">Mike Willson</string>
    <string name="tv_favorites">Favorites</string>
    <string name="tv_settings">Settings</string>
    <string name="img_back">Image back</string>
    <string name="tv_notification">🔔 Notification</string>
    <string name="tv_contactus">☎️ Contact US</string>
    <string name="tv_terms">📜 Terms</string>
    <string name="tv_policy">🔐 Privacy Policy</string>
    <string name="tv_cookie">🍪 Cookie Policy</string>
    <string name="tv_account">🔧 Manage Account</string>
    <string name="tv_sett">⚙️ Settings</string>
    <string name="ico_forward">Go ahead</string>
    <string name="img_settingsbro">Settings edit</string>
    <string name="tv_prof">My Profile</string>
    <string name="tv_personname">John Wilikns</string>
    <string name="tv_mail">johnwicky123@gmail.com</string>
    <string name="img_person">John Wilkins</string>
    <string name="img_profgirl">Profile Girl</string>
    <string name="txt_profileMy">My Profile</string>
    <string name="tv_pdetails">🧑‍💼  Personal Details</string>
    <string name="tv_bookings">📆  My Bookings</string>
    <string name="tv_payments">💳  Payment Details</string>
    <string name="tv_accou_set">⚙️  Account Settings</string>
    <string name="btn_signout">🔐 Sign out</string>
    <string name="tv_expro">Experts Profile</string>
    <string name="tv_mikewilson">Will James</string>
    <string name="tv_elec">Carpenter</string>
    <string name="tv_bio">✍️ Biography</string>
    <string name="tv_bioDes">"Mr. Willson is a skilled electrician known for his precision and reliability. With years of expertise in residential and commercial electrical work, he specializes in wiring, modern electrical systems."</string>
    <string name="tv_addbooking">🗓️ Add Apointment</string>
    <string name="btn_addbooking">Add Booking</string>
    <string name="sc_scroll1">Scroll 1</string>
    <string name="img_bookings">Bookings\n</string>
    <string name="tv_bookingT">Bookings</string>
    <string name="tv_up">Upcomming Bookings 📋</string>
    <string name="tv_pastB">Past Bookings ✅</string>
    <string name="tv_w">Home</string>
    <string name="tv_on">Customize Your Home Service!</string>
    <string name="tv_T">Customize Your Home\nServices!</string>
    <string name="tv_1">💠 Multiple services in one place.</string>
    <string name="tv_2">💠 Instant Booking and Scheduling.</string>
    <string name="tv_3">💠 Verified Professionals</string>
    <string name="btn_back">Back</string>
    <string name="tv_Top2"><![CDATA[Secure & Easy Payment Options]]></string>
    <string name="tv_Topic"><![CDATA[Secure & Easy Payment\nOptions!]]></string>
    <string name="tv_desOn">💳 Pay easily using credit/debit cards, mobile wallets, or after the service is completed.</string>
    <string name="tv_pay">Payments</string>
    <string name="tv_billing" />
    <string name="tv_bill">Billing Information</string>
    <string name="tv_cards">Payment Methods</string>
    <string name="rb1">  Credit / Debit card 💳</string>
    <string name="rb2">  Paypal 🅿️</string>
    <string name="tv_cardInfor">Card Details</string>
    <string name="btn_pay">Pay Bill</string>
    <string name="tv_secure">🔒 Your Payment is Secure and Encripted</string>
</resources>