<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MySettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="392dp"
        android:layout_height="731dp"
        android:layout_marginBottom="328dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="62dp"
            android:layout_height="461dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="72dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/tv_prof"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/ico_forward"
                android:scrollbarSize="3dp"
                app:srcCompat="@drawable/baseline_arrow_circle_right_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="227dp"
            android:layout_height="461dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.318"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_prof"
            app:layout_constraintVertical_bias="0.019">

            <TextView
                android:id="@+id/tv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_notification"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_contactus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_contactus"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_terms"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_policy"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cookie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_cookie"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_account"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tv_sett"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlam_display"
            android:text="@string/tv_settings"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/img_back"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="24dp"
            android:layout_height="37dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/img_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

        <ImageView
            android:id="@+id/img_set"
            android:layout_width="162dp"
            android:layout_height="139dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/img_settingsbro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/imgsetting" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/lay_nav"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/home"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/img_booking"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/img_bookings"
                app:srcCompat="@drawable/bookings" />

            <ImageView
                android:id="@+id/img_settings"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/settings"
                app:srcCompat="@drawable/settings" />

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/profile" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>