<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="384dp"
        android:layout_height="760dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="384dp"
            android:layout_height="284dp"
            android:background="@drawable/roundedcorners"
            android:backgroundTint="#92E3CB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_profgirl"
                android:layout_width="209dp"
                android:layout_height="202dp"
                android:layout_marginStart="170dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/img_profgirl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/pro" />

            <TextView
                android:id="@+id/tv_proftext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="69dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="285dp"
                android:layout_marginBottom="242dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/txt_profileMy"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.428" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="-6dp"
                android:layout_marginBottom="211dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_proftext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.23000002"
                app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_personprof"
            android:layout_width="177dp"
            android:layout_height="175dp"
            android:contentDescription="@string/img_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326"
            app:srcCompat="@drawable/person" />

        <TextView
            android:id="@+id/tv_personname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="178dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="389dp"
            android:fontFamily="@font/adlam_display"
            android:letterSpacing="0.1"
            android:text="@string/tv_personname"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_personprof"
            app:layout_constraintVertical_bias="0.555" />

        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="129dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="224dp"
            android:layout_marginBottom="345dp"
            android:backgroundTint="#797474"
            android:letterSpacing="0.3"
            android:text="@string/tv_mail"
            android:textColor="#867777"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.339"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_personname"
            app:layout_constraintVertical_bias="0.5" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="238dp"
            android:layout_height="218dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mail">

            <TextView
                android:id="@+id/tv_pdetaiils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/fieldshapes"
                android:padding="8dp"
                android:text="@string/tv_pdetails"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bookings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/fieldshapes"
                android:padding="8dp"
                android:text="@string/tv_bookings"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/fieldshapes"
                android:padding="8dp"
                android:text="@string/tv_payments"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_accoSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/fieldshapes"
                android:padding="8dp"
                android:text="@string/tv_accou_set"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_signout"
            android:layout_width="169dp"
            android:layout_height="55dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="163dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#D6271B"
            android:contentDescription="@string/btn_signout"
            android:text="@string/btn_signout"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/lay_nav"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/home"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/img_bookingP"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/navbar"
                app:srcCompat="@drawable/bookings" />

            <ImageView
                android:id="@+id/img_settings"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/settings"
                app:srcCompat="@drawable/settings" />

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@color/navbar"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/profile" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>