<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:backgroundTintMode="add"
    tools:context=".on2Activity">

    <TextView
        android:id="@+id/tv_Top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/andika_new_basic"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="1.2dp"
        android:text="@string/tv_Topic"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_card"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:elevation="4dp"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#070706"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textColorLink="#8BC34A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:iconTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        app:strokeColor="#170101" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:elevation="4dp"
        android:fontFamily="sans-serif-black"
        android:foregroundTint="#070706"
        android:text="@string/btn_back"
        android:textColor="@color/white"
        android:textColorLink="#8BC34A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:iconTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/tv_desonb"
        android:layout_width="340dp"
        android:layout_height="110dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="64dp"
        android:letterSpacing="0.1"
        android:lineSpacingExtra="1.4dp"
        android:text="@string/tv_desOn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Top2" />

    <ImageView
        android:id="@+id/img_pay"
        android:layout_width="203dp"
        android:layout_height="203dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desonb"
        app:srcCompat="@drawable/pay" />

    <ImageView
        android:id="@+id/img_card"
        android:layout_width="137dp"
        android:layout_height="138dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/debit" />

    <ImageView
        android:id="@+id/img_dots3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pc3" />

</androidx.constraintlayout.widget.ConstraintLayout>